src/App.css
body {
  background-color: #fffffe;
  color: #5f6c7b;
  font-family: Arial, sans-serif;
  padding-top: 70px;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100%;
  margin: 0;
}

.header {
  background-color: #094067;
  width: 100%;
  padding: 10px 0;
  text-align: center;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  color: #fffffe;
}

.header h1 {
  font-size: 2.2rem;
}

.nav-bar {
  background-color: #094067;
  width: 100%;
  height: 50px;
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(1, 1fr);
  text-align: center;
  padding: 0;
}

.nav-bar ul {
  list-style-type: none;
  padding: 0;
  display: flex;
  justify-content: center;
}

.nav-bar li {
  margin: 0 15px;
}

.nav-bar a {
  color: #fffffe;
  text-decoration: none;
  font-size: 8.5px;
}

.nav-bar a:hover {
  text-decoration: underline;
}

#home-link {
  color: #fffffe;
  text-decoration: none;
  transition: color 0.3s ease;
}

#home-link:hover {
  color: #3da9fc;
}

.header h1 {
  font-size: 2rem;
  margin: 0;
  color: #fffffe;
}

.pagination-controls {
  background-color: #525252;
  color: #fffffe;
  padding: 10px 15px;
  border-style: double;
  border: black;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  width: 100%;
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  text-align: center;
  padding: 0;
}

.pagination-button {
  border-style: double;
  border: black;
  font-size: 18px;
  gap: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.pagination-button:hover {
  background-color: #e7e7e7e8;
}

.pagination-controls:active {
  background-color: #605f5f;
}

.pagination-button:disabled {
  background-color: #525252;
  color: #525252;
  cursor: not-allowed;
}

.pagination-button:disabled:hover {
  background-color: #525252;
  color: #525252;
}

.page {
  background-color: #f0f5f3;
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 90%;
  margin: 0 auto;
  padding: 20px;
  border-radius: 12px;
  box-sizing: border-box;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 10px;
  width: 90%;
  margin: 0 auto;
  padding: 10px;
  background-color: #fffffe;
  border-radius: 12px;
  border: 2px solid #094067;
}

.grid-container .content {
  background-color: #90b4ce;
  border: 2px solid #094067;
  border-radius: 10px;
  padding: 5px;
  color: #094067;
  text-align: center;
  transition: transform 0.3s ease, background-color 0.3s ease;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 400px;
  overflow: hidden;
  position: relative;
}

.grid-container .content .text {
  font-size: calc(1rem + 1vw);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.grid-container .content:hover {
  background-color: #3da9fc;
  transform: scale(0.95);
  color: #fffffe;
}

.grid-container img {
  width: 100%;
  height: auto;
  border-radius: 5px;
  margin-bottom: 10px;
}

.row-container,
.column-container {
  display: flex;
  gap: 20px;
  width: 80%;
  margin: 0 auto;
  padding: 20px;
  background-color: #fffffe;
  border-radius: 12px;
  border: 2px solid #094067;
}

.row-container {
  flex-direction: row;
  overflow-x: auto;
  white-space: nowrap;
}

.column-container {
  flex-direction: column;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 58%;
  height: auto;
  border-radius: 5px;
}

.row,
.column {
  display: flex;
  gap: 10px;
}

.row {
  flex-direction: row;
}

.column {
  flex-direction: column;
}

.params-bar {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 95%;
  max-width: 1200px;
  margin: 20px auto;
  padding: 10px;
  background-color: #f0f5f3;
  border-radius: 12px;
  border: 2px solid #094067;
  box-sizing: border-box;
}

.params-bar .column {
  align-items: center;
}

.params-bar select {
  width: 100%;
  padding: 8px;
  border-radius: 6px;
  border: 2px solid #3da9fc;
  background-color: #fffffe;
  color: #094067;
  font-size: 0.9rem;
  outline: none;
  transition: background-color 0.3s ease;
}

.params-bar select:hover {
  background-color: #d9e4dd;
}

.params-bar select:focus {
  border-color: #ef4565;
  background-color: #f0f5f3;
}

button {
  background-color: #525252;
  color: #fffffe;
  padding: 10px 15px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: #e7e7e7e8;
}

button:active {
  background-color: #094067;
}

.post-comment-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
}

.form {
  display: grid;
  padding: 20px;
  border: 2px solid #094067;
  background-color: #f2f7f5;
  border-radius: 10px;
  gap: 20px;
}

.comments {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  align-items: flex-start;
  padding: 10px;
  border: 2px solid #094067;
  background-color: #f2f7f5;
  border-radius: 10px;
  margin-bottom: 20px;
  gap: 20px;
}

.vote-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.comment-votes {
  text-align: center;
  font-weight: bold;
  color: #094067;
  font-size: 1.2rem;
}

.add-vote-buttons,
.minus-vote-buttons {
  background-color: #525252;
  color: #fffffe;
  padding: 10px;
  border-radius: 5px;
  cursor: pointer;
  width: 40px;
  height: 40px;
  font-size: 1.2rem;
  transition: background-color 0.3s ease;
  display: flex;
  justify-content: center;
  align-items: center;
}

.add-vote-buttons:hover,
.minus-vote-buttons:hover {
  background-color: #c28c95;
}

.comment-body {
  flex: 1;
  color: #5f6c7b;
  font-size: 1rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

.comment-meta {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 25px;
  color: #5f6c7b;
  font-size: 0.9rem;
  width: 200px;
}

.comment-meta p {
  margin: 0;
  text-align: right;
}

.delete-button {
  background-color: #f2f7f5;
  padding: 5px;
  border-radius: 5px;
  cursor: pointer;
  width: 40px;
  margin: auto;
  transition: background-color 0.3s ease;
}

.delete-button:hover {
  background-color: #c28c95;
}

.loading {
  padding: 0;
  border-radius: 5px;
  cursor: pointer;
  width: 100px;
  margin: auto;
  transition: background-color 0.3s ease;
}

@media (min-width: 768px) {
  .header h1 {
    font-size: 2.2rem;
  }

  .nav-bar {
    grid-template-columns: repeat(1, 1fr);
    text-align: center;
    padding: 0;
  }
  .nav-bar a {
    font-size: 18px;
  }

  .page {
    padding: 15px;
    max-width: 1400px;
  }

  .grid-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1024px) {
  .header h1 {
    font-size: 2.5rem;
  }

  .nav-bar {
    background-color: #094067;
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    text-align: center;
    padding: 0;
    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
  }

  .nav-bar {
    grid-template-columns: repeat(1, 1fr);
    text-align: center;
    padding: 0;
  }
  .nav-bar a {
    font-size: 18px;
  }

  .params-bar {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 95%;
    align-items: center;
  }
  .param-column {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-left: 100%;
  }

  .params-bar select {
    width: 100%;
    padding: 8px;
    border-radius: 6px;
    border: 2px solid #3da9fc;
    background-color: #fffffe;
    color: #094067;
    font-size: 0.9rem;
    outline: none;
    transition: background-color 0.3s ease;
    text-align: center;
  }

  .grid-container {
    grid-template-columns: repeat(3, 1fr);
    padding: 20px;
  }

  .grid-container .content {
    padding: 30px;
    height: 300px;
  }

  img {
    max-width: 75%;
  }

  .params-bar {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    align-items: center;
  }

  .vote-container {
    max-width: 30%;
  }

  .comment-meta {
    width: 100%;
  }

  .delete-button {
    margin-right: 2%;
  }
}

@media (min-width: 1200px) {
  .grid-container {
    grid-template-columns: repeat(4, 1fr);
  }

  .nav-bar {
    grid-template-columns: repeat(1, 1fr);
    text-align: center;
    padding: 0;
  }
  .nav-bar a {
    font-size: 18px;
  }

  .params-bar {
    flex-direction: row;
    gap: 5px;
  }

  .params-bar select {
    width: 200px;
  }

  .vote-container {
    max-width: 20%;
  }
}

@media (min-width: 1450px) {
  .nav-bar {
    grid-template-columns: repeat(1, 1fr);
    text-align: center;
    padding: 0;
  }
  .nav-bar a {
    font-size: 18px;
  }
  .page {
    max-width: 1400px;
  }
}

